---
title: EV Marketplace Core Domain
---
classDiagram
  direction LR
  class Account {
    +Long id
    +String phoneNumber
    +String email
    +AccountRole role
    +AccountStatus status
  }
  class Profile { +Long id }
  class Branch { +Long id +String name +String province }
  class Listing {
    +Long id
    +String title
    +BigDecimal price
    +ListingStatus status
    +Visibility visibility
    +Boolean consigned
  }
  class ConsignmentRequest {
    +Long id
    +ItemType itemType
    +ConsignmentRequestStatus status
    +BigDecimal ownerExpectedPrice
  }
  class ConsignmentInspection { +Long id +ConsignmentInspectionResult result }
  class ConsignmentAgreement {
    +Long id
    +BigDecimal commissionPercent
    +BigDecimal acceptablePrice
    +ConsignmentAgreementStatus status
    +AgreementDuration duration
  }
  class SaleOrder {
    +Long id
    +BigDecimal amount
    +BigDecimal paidAmount
    +OrderStatus status
  }
  class Contract { +Long id +ContractStatus status }
  class SalePayment { +Long id +BigDecimal amount +PaymentMethod method +PaymentPurpose purpose +PaymentStatus status }
  class Category { +Long id +String name }
  class Favorite { +Long id }
  class ListingMedia { +Long id }
  class Notification { +Long id }
  class ListingStatusHistory { +Long id }

  Account "1" o-- "1" Profile : owns
  Account "1" --> "*" Listing : seller
  Account "1" --> "*" Favorite : favorites
  Account "1" --> "*" Notification : notifications
  Account "1" --> "*" ListingStatusHistory : statusChanges
  Branch "1" --> "*" Account : accounts
  Branch "1" --> "*" Listing : listings
  Branch "1" --> "*" ConsignmentAgreement : agreements
  Branch "1" --> "*" ConsignmentInspection : inspections
  Category "1" --> "*" Listing : listings
  Category "1" --> "*" ConsignmentRequest : requests

  Account "1" --> "*" ConsignmentRequest : owner
  Account "1" --> "*" ConsignmentAgreement : staff
  Account "1" --> "*" SaleOrder : buyer
  Account "1" --> "*" SaleOrder : seller
  Account "1" --> "*" SaleOrder : createdBy
  Account "1" --> "*" SalePayment : recordedBy

  ConsignmentRequest "1" --> "*" ConsignmentInspection : inspections
  ConsignmentRequest "1" --> "0..1" ConsignmentAgreement : agreement
  ConsignmentAgreement "1" --> "0..1" Listing : listing
  Listing "1" --> "*" ListingMedia : media
  Listing "1" --> "*" Favorite : favorites
  Listing "1" --> "*" SaleOrder : orders
  Listing "1" --> "0..1" ConsignmentAgreement : consignmentAgreement
  SaleOrder "1" --> "0..1" Contract : contract
  SaleOrder "1" --> "*" SalePayment : payments
  SalePayment "*" --> "0..1" Listing : listing
  SalePayment "*" --> "0..1" SaleOrder : order
